--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
 
         <div class="home-img">
-            <img src="images/profile2.jpg" alt="" height="700px">
+            <img src="images/profile2.jpg" alt="">
         </div>
         
     </section>
@@ -59,7 +59,7 @@
     <!--about section description-->
     <section class="about" id="about">
         <div class="about-img">
-            <img src="images/profile2.jpg" alt="" height="700px">
+            <img src="images/profile2.jpg" alt="">
         </div>
 
         <!-- <div class="info-about1">
